<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RotateFruits</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="initialText">Here is the info</string>

    <string name="apple">Apple</string>
    <string name="grape">Grape</string>
    <string name="kiwi">Kiwi</string>
    <string name="orange">Orange</string>
    <string name="banana">Banana</string>

</resources>
