<!--
Author: Kimitoshi Senno
Date: 	Sep 15, 2014
For:	CS311D Homework 3
File:	RotateFruits/app/src/main/res/layout/activity_main.xml
Purpose:Define layout for the application in Portrait mode
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonApple"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/apple"/>

    <Button
        android:id="@+id/buttonGrape"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/grape"/>

    <Button
        android:id="@+id/buttonKiwi"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/kiwi"/>

    <Button
        android:id="@+id/buttonOrange"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/orange"/>

    <Button
        android:id="@+id/buttonBanana"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/banana"/>

    <TextView
        android:id="@+id/myTextView"
        android:text="@string/initialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
